fixed actordentify-hero-image-mobile alignment

--- a/css/projects.css
+++ b/css/projects.css
@@ -435,4 +435,8 @@
 
     #actordentify-card p { width: 330px; }
 
+    #actordentify-hero-image-mobile {
+        top: 100px;
+    }
+
 }
